<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/launch_logo"
        android:layout_margin="15dp"
        android:padding="50dp"/>
    <EditText android:id="@+id/firstNameid"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/firstnametext"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@drawable/shape"
        />

    <EditText android:id="@+id/LastNameid"
        android:layout_height="wrap_content"
        android:layout_width="240dp"
        android:layout_gravity="center"
        android:hint="@string/lastnametext"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@drawable/shape"
        android:padding="5dp"/>
    <EditText android:id="@+id/editPasswordAcc"
        android:layout_height="wrap_content"
        android:layout_width="240dp"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:hint="@string/enter_password"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:background="@drawable/shape"
        android:padding="5dp"/>
    <EditText android:id="@+id/editEmailAcc"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enter_emailId"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@drawable/shape"
        />



    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/create_acc"
        android:background="@drawable/log_in_button"
        android:textSize="20sp"
        android:textColor="@color/whiteColor"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        />

</LinearLayout>